dev/ingress/penguin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: penguin-ingress
  namespace: penguin-ns
spec:
  ingressClassName: nginx
  rules:
    - host: penguin.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: penguin-service
                port:
                  number: 10000
